# opengl-stuff

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
src/: main.cpp  misc.hpp  shader.hpp
src/Geometry/: triangle.hpp
src/Graphics/: misc.hpp  objects.hpp  program.hpp  shader.hpp
src/Input/: Handler.hpp
src/Shaders/: triangle.hpp
